@startuml

class UIManager {
    void newScan()
    void getSavedScan()
}

class Program {
    - AnalyseManager analyseManager
    - DBManager dbManager
    - FileManager fileManager
    - AnalysesResult AnalysesResult
    
    +Start()
    +NewScan()
    +SaveResult()
    +DiscardResult()
    +GetResults()
}

class AnalyseManager {
    ..Fields..
    - Queue<string> Text { get; set; }
    - AnalysesResult Result { get; set; }
    ..Methods..
    + StartAnalysis() : AnalyzerResult
    - TotalWordCount()
    - TotalCharCount()
    - CheckLongestWord()
    - HeatmapWord()
    - HeatmapChar()
    
}

class AnalysesResult {
    ..Fields / Properties..
    + TotalWordCount {get; set;}
    + TotalCharCount {get; set;}
    + LongestWord {get; set;}
    + HeatmapWord {get; set;}
    + HeatmapChar {get; set;}
    ..Methods..
    + ToString()
}

class DBManager {
    - AnalysesResult AnalysesResult
    + saveData()
    + retrieveData()
}

class FileManager {
    + readFile()
    + retrieveQueArr()
}

UIManager <--> Program
AnalyseManager <-> Program
AnalyseManager <-- AnalysesResult
AnalysesResult -> DBManager

Program <-> FileManager 

Program <--> DBManager 

@enduml